<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/frame"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        style="@style/DialogHeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/post_game_dialog_header" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_game_dialog_label_name" />

        <TextView
            android:id="@+id/post_game_name_text_view"
            style="@style/DialogValueTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_game_dialog_label_time" />

        <TextView
            android:id="@+id/post_game_time_text_view"
            style="@style/DialogValueTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_game_dialog_label_pts" />

        <TextView
            android:id="@+id/post_game_pts_text_view"
            style="@style/DialogValueTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_game_dialog_label_efficiency" />

        <TextView
            android:id="@+id/post_game_efficiency_text_view"
            style="@style/DialogValueTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <com.daniily000.android.hackyou.view.MenuButton
            android:id="@+id/post_game_restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginRight="48dp"
            android:gravity="center_horizontal"
            android:text="@string/post_game_dialog_button_restart"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:highlightingColor="@color/colorPrimaryInverse" />

        <com.daniily000.android.hackyou.view.MenuButton
            android:id="@+id/post_game_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/post_game_dialog_button_finish"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:highlightingColor="@color/colorPrimaryInverse" />

    </LinearLayout>

</LinearLayout>