<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/frame"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        style="@style/DialogHeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/pre_game_dialog_header" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pre_game_name_label"
            style="@style/DialogItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_game_dialog_label_name" />

        <EditText
            android:id="@+id/pre_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pre_game_time_label"
            style="@style/DialogItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_game_dialog_label_time" />

        <EditText
            android:id="@+id/pre_game_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </LinearLayout>

    <com.daniily000.android.hackyou.view.MenuButton
        android:id="@+id/pre_game_proceed_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pre_game_dialog_button_start"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:highlightingColor="@color/colorPrimaryInverse" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccentDark" />


</LinearLayout>